# Renderer

./: CMakeLists.txt  README.md
Renderer/: CMakeLists.txt
Renderer/Libraries/Includes/glad/: glad.h
Renderer/Libraries/Libs/: glfw3.lib
Renderer/Shader/: BoundingBox.vert  Light.frag  Light.vert  Shadow.frag  Shadow.vert  Shape.frag  Shape.geo  Shape.vert  SkyBox.vert  screen.frag
Renderer/Source/: Collision.cpp  Collision.h  FrameBufferObject.cpp  FrameBufferObject.h  GeometryGenerator.cpp  GeometryGenerator.h  MeshLoader.cpp  MeshLoader.h  TextureLoader.cpp  TextureLoader.h  Utils.cpp  Utils.h  glad.c  main.cpp  render.cpp  render.h  shader.cpp  test_camera.cpp  test_camera.h  test_shader.h
